--- a/src/components/Summery/Summery.css
+++ b/src/components/Summery/Summery.css
@@ -6,14 +6,12 @@
     position: relative;
     overflow: hidden;
     margin-top: -20px;
-    /* Prevent text from going outside the container */
 }
 
 .moving-text {
     display: flex;
     white-space: nowrap;
     animation: scrollText 15s linear infinite;
-    /* Smooth infinite scrolling */
     align-items: center;
 }
 
@@ -21,20 +19,17 @@
     display: flex;
     align-items: center;
     margin-right: 30px;
-    /* Space between words with icons */
 }
 
 .icon {
     margin-right: 8px;
     font-size: 38px;
     color: #fff;
-    /* Icon color */
 }
 
 .moving-text span {
     font-size: 25px;
     color: #fff;
-    /* Word color */
 }
 
 @keyframes scrollText {
@@ -42,15 +37,12 @@
         transform: translateX(0);
     }
     100% {
-        transform: translateX(-100%);
+        transform: translateX(-50%);
     }
 }
 
 
-/* Responsive Design */
-
-
-/* Tablets */
+/* Responsive adjustments */
 
 @media (max-width: 768px) {
     .moving-text span {
@@ -64,12 +56,8 @@
     }
     .moving-text {
         animation: scrollText 18s linear infinite;
-        /* Slower scrolling for better readability on smaller screens */
     }
 }
-
-
-/* Mobile Devices */
 
 @media (max-width: 480px) {
     .moving-text span {
@@ -83,6 +71,5 @@
     }
     .moving-text {
         animation: scrollText 20s linear infinite;
-        /* Slowest scrolling for mobile */
     }
 }
