--- a/src/components/Overview/Overview.css
+++ b/src/components/Overview/Overview.css
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    border-bottom: 10px solid #ffcb30;
 }
 
 .overview-wrapper {
