--- a/src/components/Srvc/Service.css
+++ b/src/components/Srvc/Service.css
@@ -1,5 +1,3 @@
-/* General Styles */
-
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap");
 .service-page-container {
     display: flex;
@@ -18,7 +16,7 @@
     font-weight: 700;
     color: #666666;
     text-align: center;
-    margin: 50px 0 40px;
+    margin-bottom: 50px;
 }
 
 
@@ -32,6 +30,10 @@
     width: 100%;
     max-width: 1125px;
     margin-bottom: 40px;
+    border: 1px solid #ffe188;
+    border-radius: 10px;
+    margin-top: 30px;
+    padding: 20px;
 }
 
 .service-custom-left-class {
@@ -77,7 +79,6 @@
     text-align: center;
     padding: 20px;
     border-left: 4px solid #ffe0ad;
-    background: linear-gradient(270deg, #ffffff 0%, rgba(255, 235, 191, 0.4) 100%);
 }
 
 .service-right-column img {
@@ -89,53 +90,57 @@
 }
 
 
-/* Cards Section */
+/* Four Colored Cards Section (For 1200px screens) */
 
-.service-cards-section {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+.service-cards-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     gap: 20px;
+    width: 100%;
+    max-width: 1125px;
     margin-top: 40px;
-    border: 1px solid #ffa60070;
-    border-radius: 10px;
-    padding: 20px;
-    background: rgb(255, 255, 255);
-    background: linear-gradient(184deg, rgba(255, 255, 255, 0.6362920168067228) 0%, rgba(255, 235, 170, 0.105) 100%);
 }
 
 .service-card {
-    width: 280px;
-    padding: 20px;
     text-align: center;
     border-radius: 10px;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    color: #232323;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    box-shadow: 0 4px 8px rgba(98, 98, 98, 0.1);
 }
 
-.service-card img {
-    width: 100px;
-    height: 100px;
-    margin-bottom: 15px;
-    border-radius: 50%;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border: 5px solid #ffb700;
+.service-card .card-image {
+    width: 100%;
+    height: 150px;
+    border-radius: 10px 10px 0px 0px;
+    overflow: hidden;
 }
 
-.service-card h3 {
-    font-size: 1.5rem;
-    color: #ffa200;
-    margin-bottom: 10px;
+.service-card .card-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.service-card .card-content {
+    padding: 15px;
+    font-size: 1rem;
+}
+
+.service-card .card-content h3 {
+    font-size: 1.2rem;
+    margin: 10px 0;
     font-weight: bold;
 }
 
-.service-card p {
-    font-size: 0.8rem;
-    color: #6c757d;
-    line-height: 1.5;
+.service-card .card-content p {
+    font-size: .9rem;
+    line-height: 1.6;
+    color: #484848;
 }
-
-
-/* Animation */
 
 
 /* Animation */
@@ -143,14 +148,12 @@
 .animated-section {
     opacity: 0;
     transform: translateY(50px);
-    /* Move it down initially */
     transition: all 0.8s ease-in-out;
 }
 
 .animated-section.animate {
     opacity: 1;
     transform: translateY(0);
-    /* Animate it to its original position */
 }
 
 .left-to-bottom.animate {
@@ -159,21 +162,16 @@
 
 .left-to-bottom {
     transform: translateY(50px);
-    /* Move it down initially */
-}
-
-.right-to-bottom {
-    transform: translateY(50px);
-    /* Move it down initially */
-}
-
-.right-to-bottom.animate {
-    transform: translateY(0);
-    /* Animate it to its original position */
 }
 
 
 /* Responsive Design */
+
+@media (max-width: 1200px) {
+    .service-cards-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
 
 @media (max-width: 768px) {
     .service-top-section {
@@ -194,15 +192,5 @@
     }
     .service-custom-left-class h2 {
         font-size: 1.5rem;
-    }
-    .service-card {
-        width: 300px;
-        padding: 15px;
-    }
-    .service-card h3 {
-        font-size: 1.2rem;
-    }
-    .service-card p {
-        font-size: 0.9rem;
     }
 }
