--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url('../../assets/images/Hero.png');
+    background-image: url('../../assets/images/HeropageBg.png');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -70,10 +70,11 @@
 
 .image-wrapper img {
     max-width: 100%;
-    height: auto;
+    height: 600px;
     object-fit: contain;
     display: block;
     margin-top: 80px;
+    display: none;
 }
 
 
@@ -108,7 +109,6 @@
     }
     .hero-title {
         font-size: 3.5rem;
-        margin-top: 50px;
     }
     .hero-subtitle {
         font-size: 1rem;
@@ -127,9 +127,10 @@
 
 @media (max-width: 479px) {
     .hero-section {
-        height: 110vh;
+        height: 90vh;
         padding: 20px;
         flex-direction: column-reverse;
+        background-image: url('../../assets/images/MobileHero.png');
     }
     .hero-image {
         width: 100%;
@@ -137,16 +138,23 @@
     }
     .hero-title {
         font-size: 3rem;
-        margin-top: 80px;
+        margin-top: -30px;
         /* Adjusted margin for better spacing */
         line-height: 1;
         text-align: center;
+        color: #2f2f2fed;
+        margin-top: 30px;
+        font-weight: bold;
+        line-height: 1.3;
     }
     .hero-subtitle {
-        font-size: 0.9rem;
-        line-height: 1.4;
+        font-size: 1rem;
+        line-height: 1.6;
         margin-bottom: 10px;
         text-align: center;
+        color: #464646;
+        font-weight: 500;
+        margin-bottom: 50px;
         /* Removed negative margin */
     }
     .hero-content .btn {
