--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -53,6 +53,7 @@
     border-radius: 10px;
     overflow: hidden;
     border-right: #ffcb30 solid 4px;
+    border-left: #ffcb30 solid 4px;
 }
 
 .about-image {
@@ -78,6 +79,10 @@
     color: #555555;
 }
 
+.section-title-2 {
+    margin-top: 30px;
+}
+
 .about-content h3 {
     color: #4f4f4f;
     font-size: 1.8rem;
@@ -87,7 +92,7 @@
 
 .about-content p {
     margin-bottom: 20px;
-    font-size: .9rem;
+    font-size: 1rem;
     line-height: 1.6;
     font-weight: 100;
     text-align: justify;
@@ -109,8 +114,44 @@
     background-color: #e67e00;
 }
 
+.about-video {
+    flex: 1;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.about-video video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.checklist {
+    list-style: none;
+    padding: 0;
+    font-weight: 100;
+    font-size: .9rem;
+}
+
+.checklist li {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.checklist img {
+    margin-right: 10px;
+    width: 30px;
+    margin-left: 20px;
+}
+
 
 /* Responsive Design */
+
+
+/* Mobile styles */
 
 @media (max-width: 768px) {
     .about-container {
@@ -119,7 +160,30 @@
         height: auto;
     }
     .about-image,
+    .about-content,
+    .about-video {
+        flex: none;
+        width: 100%;
+        height: auto;
+    }
     .about-content {
+        padding: 20px;
+    }
+}
+
+
+/* Tablet styles */
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .about-container {
+        flex-direction: column;
+        width: 100%;
+        height: auto;
+        gap: 30px;
+    }
+    .about-image,
+    .about-content,
+    .about-video {
         flex: none;
         width: 100%;
         height: auto;
